# ext-php-copilot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  composer.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: COPILOT-EXAMPLES.md  COPILOT-NATIVE.md  COPILOT-OPTIONS.md  COPILOT-WRAPPER.md  README.md
examples/: basic.php  generic_app.php  models.php  streaming.php
php/: Copilot.php  CopilotConfig.php
php/Exception/: AuthenticationException.php  ConfigurationException.php  CopilotException.php
src/: client.rs  lib.rs  options.rs  runtime.rs  session.rs
stubs/: copilot.php
tests/: acceptance.php  lint.php  smoke.php  unit.php
